<resources>
    <string name="app_name">Organa</string>
    <string name="action_settings">Settings</string>
    <string name="name_caps">NAME</string>
    <string name="path_caps">PATH</string>
    <string name="panel">ORGANA CONTROL BOARD</string>
    <string name="destination">DESTINATION</string>
    <string name="source">SOURCE</string>
    <string name="count">COUNT</string>

    <string name="cleaned">[ CLEANED ]</string>
    <string name="skipped">[ SKIPPED ]</string>
    <string name="remaining">[ REMAINING ]</string>
    <string name="status">STATUS</string>
    <string name="space_left">SPACE LEFT</string>
    <string name="power">POWER</string>
    <string name="start">START</string>
    <string name="mp3">[ MP3 ]</string>
    <string name="size">SIZE</string>
    <string name="display_monitor">DISPLAY MONITOR</string>
    <string name="system_check">SYSTEM CHECK</string>
    <string name="power_up_to_start">POWER UP TO START_</string>
    <string name="btm_dashes">_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _</string>
    <string name="mid_dashes">- - - - - - - - - - - - - - - - -</string>
    <string name="_0">0</string>
    <string name="set">SET</string>
    <string name="_ok">%1$s: OK</string>
    <string name="_fail">%1$s: FAIL</string>
    <string name="_unreadable">%1$s: UNREADABLE</string>
    <string name="_unwritable">%1$s: UNWRITABLE</string>
    <string name="dest_ok">DESTINATION: OK</string>
    <string name="duration">DURATION</string>
    <string name="_0_00">0.00</string>
    <string name="engine">ENGINE</string>
    <string name="choose_source_folder">CHOOSE SOURCE FOLDER</string>
    <string name="choose_dest_folder">CHOOSE DESTINATION FOLDER</string>
    <string name="scanning_">SCANNING: %1$s</string>
    <string name="_scanning">%1$s: SCANNING</string>
    <string name="title_"><b>TITLE: </b>%1$s</string>
    <string name="album_">ALBUM: %1$s</string>
    <string name="artist_">ARTIST: %1$s</string>
    <string name="title_and_subtitle">%1$s\n<font color="#44D858">%2$2</font></string>
    <string name="_"/>
    <string name="_999">999</string>
    <string name="_00_00_n00">00:00 00</string>
    <!--<string name="progress_percent">%1$s %2$.1f</string>-->
    <string name="precision_1">%1$.1f %2$s</string>
    <string name="progress_percent">%1$d</string>
    <string name="scan_complete">SCAN COMPLETE</string>
    <string name="unknown">UNKNOWN</string>

    <string name="files">files</string>
    <string name="num_str">%1$d %2$s</string>
    <string name="ok">OK</string>

    <!--Source-->
    <string name="src_msg">SOURCE: %1$s</string>
    <string name="default_source_not_found">Default folders not found.\nChoose a folder with audio files.</string>

    <!--Destination-->
    <string name="dest_msg">DEST: %1$s</string>
    <string name="no_default_dest_folder">Unable to create default folder.\nChoose a destination folder.</string>
    <string name="no_write_permissions">Write permissions not granted.</string>
</resources>
