<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        android:background="@drawable/main_bg_bordered"
        android:padding="5dp"
        tools:context=".DashboardActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/dashboard_panel_label"
              android:background="@color/button"
              android:gravity="center"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:textColor="@color/tint_1"
              android:text="@string/panel"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboard_panel_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:paddingBottom="3dp"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_panel_label"
            android:background="@drawable/transparent_bg_bordered">

        <View android:layout_width="4dp"
              android:layout_height="0dp"
              android:id="@+id/dashboard_source_bar"
              android:background="@color/white"
              android:layout_marginStart="2dp"
              app:layout_constraintTop_toTopOf="@id/dashboard_source_btn"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toBottomOf="@+id/dashboard_source_btn"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/dashboard_source_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guide_vert_50"
                android:id="@+id/dashboard_source_btn"
                android:drawableEnd="@drawable/play_up"
                style="@style/PanelButton"
                android:paddingEnd="8dp"
                android:drawablePadding="15dp"
                android:paddingStart="1dp"
                android:text="@string/source"/>

        <LinearLayout android:layout_width="0dp"
                      android:id="@+id/dashboard_source_layout"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="@+id/dashboard_source_bar"
                      app:layout_constraintTop_toBottomOf="@+id/dashboard_source_btn"
                      app:layout_constraintEnd_toEndOf="@id/dashboard_source_btn"
                      style="@style/PanelSquare">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_src_panel_name"
                      style="@style/PanelTextView"
                      tools:text="WhatsApp Audio"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_src_panel_name_label"
                      style="@style/PanelLabelTextView"
                      android:text="@string/name_caps"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelTextView"
                      android:id="@+id/dashboard_src_panel_path"
                      tools:text="/path/to/directory"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelLabelTextView"
                      android:id="@+id/dashboard_src_panel_path_label"
                      android:text="@string/path_caps"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelTextView"
                      android:id="@+id/dashboard_src_panel_file_count"
                      tools:text="230"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_src_panel_file_count_label"
                      style="@style/PanelLabelTextView"
                      android:text="SIZE"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/guide_vert_50"
                app:layout_constraintGuide_percent="0.5"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guide_vert_50"
                app:layout_constraintEnd_toStartOf="@id/dashboard_dest_bar"
                android:id="@+id/dashboard_dest_btn"
                style="@style/PanelButton"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:drawableStart="@drawable/play_down"
                android:text="@string/destination"/>

        <View android:layout_width="5dp"
              android:layout_height="0dp"
              android:id="@+id/dashboard_dest_bar"
              android:background="@color/white"
              android:layout_marginEnd="4dp"
              app:layout_constraintTop_toTopOf="@+id/dashboard_dest_btn"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="@+id/dashboard_dest_btn"/>

        <LinearLayout android:layout_width="0dp"
                      android:id="@+id/dashboard_dest_panel_layout"
                      android:layout_height="wrap_content"
                      style="@style/PanelSquare"
                      app:layout_constraintStart_toStartOf="@+id/dashboard_dest_btn"
                      app:layout_constraintTop_toBottomOf="@+id/dashboard_dest_btn"
                      app:layout_constraintEnd_toEndOf="@+id/dashboard_dest_bar">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_dest_panel_name"
                      style="@style/PanelTextView"
                      tools:text="Nwom"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_dest_panel_name_label"
                      style="@style/PanelLabelTextView"
                      android:text="@string/name_caps"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelTextView"
                      android:id="@+id/dashboard_dest_panel_path"
                      tools:text="/path/to/directory"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelLabelTextView"
                      android:id="@+id/dashboard_dest_panel_path_label"
                      android:text="@string/path_caps"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/PanelTextView"
                      android:id="@+id/dashboard_dest_panel_file_count"
                      tools:text="230"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dashboard_dest_panel_file_count_label"
                      style="@style/PanelLabelTextView"
                      android:text="@string/count"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dashboard_gears"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="4dp"
            app:lottie_fileName="lottie/47_gears.json"
            app:lottie_loop="true"
            android:scaleType="centerCrop"
            app:lottie_imageAssetsFolder="lottie"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_panel_layout"
            app:layout_constraintStart_toEndOf="@+id/dashboard_counter_layout"
            app:layout_constraintEnd_toStartOf="@+id/dashboard_power_switch"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dashboard_gears_outer"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="4dp"
            app:lottie_fileName="lottie/241_autoconnect_loading.json"
            app:lottie_loop="true"
            app:lottie_speed="3"
            android:scaleType="centerCrop"
            app:lottie_imageAssetsFolder="lottie"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_panel_layout"
            app:layout_constraintStart_toEndOf="@+id/dashboard_counter_layout"
            app:layout_constraintEnd_toStartOf="@+id/dashboard_power_switch"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dashboard_power_switch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/transparent_bg_bordered"
            android:onClick="onPowerSwitch"
            app:lottie_imageAssetsFolder="lottie"
            app:lottie_fileName="lottie/switch_power_2.json"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_panel_layout"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/dashboard_power_switch_label"
              app:layout_constraintStart_toStartOf="@id/dashboard_power_switch"
              app:layout_constraintEnd_toEndOf="@+id/dashboard_power_switch"
              android:background="@drawable/transparent_bg_bordered"
              android:textColor="@color/tint_1"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/dashboard_power_switch"
              android:text="START"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dashboard_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="lottie"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_fileName="lottie/simple_sliding_bars_1.json"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_gears_outer"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/dashboard_counter_label"
              app:layout_constraintTop_toBottomOf="@+id/dashboard_panel_layout"
              app:layout_constraintBottom_toTopOf="@+id/dashboard_counter_layout"
              app:layout_constraintStart_toStartOf="parent"
              android:background="@color/colorPrimaryDark"
              android:textSize="16sp"
              android:padding="4dp"
              android:gravity="center"
              android:textColor="@color/colorPrimary"
              android:text="@string/progress_monitor"/>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                       android:layout_height="0dp"
                                                       android:orientation="vertical"
                                                       android:id="@+id/dashboard_counter_layout"
                                                       app:layout_constraintTop_toBottomOf="@+id/dashboard_counter_label"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="@id/dashboard_counter_label"
                                                       app:layout_constraintBottom_toTopOf="@+id/dashboard_active_bar_btm">

        <TextView android:id="@+id/counter_mp3"
                  style="@style/CounterTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/counter_mp3_label"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  tools:text="10"/>
        <TextView android:id="@+id/counter_mp3_label"
                  style="@style/CounterPaneLabelTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/counter_mp3"
                  app:layout_constraintBottom_toTopOf="@+id/counter_cleaned"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  android:text="MP3"/>
        <TextView android:id="@+id/counter_cleaned"
                  style="@style/CounterTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/counter_mp3_label"
                  app:layout_constraintBottom_toTopOf="@+id/counter_cleaned_label"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  tools:text="20"/>
        <TextView android:id="@+id/counter_cleaned_label"
                  android:text="@string/cleaned"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  app:layout_constraintTop_toBottomOf="@+id/counter_cleaned"
                  app:layout_constraintBottom_toTopOf="@+id/counter_skipped"
                  style="@style/CounterPaneLabelTextView"/>
        <TextView android:id="@+id/counter_skipped"
                  style="@style/CounterTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  app:layout_constraintTop_toBottomOf="@+id/counter_cleaned_label"
                  app:layout_constraintBottom_toTopOf="@+id/counter_skipped_label"
                  tools:text="20"/>
        <TextView android:id="@+id/counter_skipped_label"
                  android:text="@string/skipped"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  app:layout_constraintTop_toBottomOf="@+id/counter_skipped"
                  app:layout_constraintBottom_toTopOf="@+id/counter_remaining"
                  style="@style/CounterPaneLabelTextView"/>
        <TextView android:id="@+id/counter_remaining"
                  style="@style/CounterTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  app:layout_constraintTop_toBottomOf="@+id/counter_skipped_label"
                  app:layout_constraintBottom_toTopOf="@+id/counter_remaining_label"
                  tools:text="20"/>
        <TextView android:id="@+id/counter_remaining_label"
                  android:text="@string/remaining"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="@id/guide_counter_vert_80"
                  app:layout_constraintTop_toBottomOf="@+id/counter_remaining"
                  app:layout_constraintBottom_toBottomOf="parent"
                  style="@style/CounterPaneLabelTextView"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/guide_counter_vert_80"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45"/>

        <ProgressBar android:layout_width="12dp"
                     android:layout_height="0dp"
                     style="@android:style/Widget.ProgressBar.Horizontal"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="@+id/counter_remaining"
                     android:layout_margin="5dp"
                     app:layout_constraintTop_toTopOf="@+id/counter_mp3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guide_counter_vert_80"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/dashboard_counter_status_label"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="@+id/counter_remaining_label"
                  app:layout_constraintStart_toStartOf="@id/guide_counter_vert_80"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toBottomOf="@+id/counter_remaining_label"
                  android:textColor="@color/bright"
                  android:textSize="12sp"
                  android:text="@string/status"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dashboard_active_bar_btm"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="lottie"
            app:lottie_autoPlay="true"
            app:lottie_scale="5"
            app:lottie_loop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_fileName="lottie/48_progress_bar.json"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>